Blender crashes if the resolution % is changed while rendering an animation #39901

Closed
opened 2014-04-25 18:37:23 +02:00 by carczar · 13 comments
carczar commented 2014-04-25 18:37:23 +02:00 (Migrated from localhost:3001)

System Information
Windows 7 Enterprise 64-bit
Nvidia Quatro 600

Blender Version
Broken: (example: 2.69.0 r60995)

Short description of error
While rendering an animation, if the resolution scale slider under scene setting is changed, blender promptly crashes.

Exact steps for others to reproduce the error

  1. Render an animation.
  2. While render is processing, change the resolution scale.
**System Information** Windows 7 Enterprise 64-bit Nvidia Quatro 600 **Blender Version** Broken: (example: 2.69.0 r60995) **Short description of error** While rendering an animation, if the resolution scale slider under scene setting is changed, blender promptly crashes. **Exact steps for others to reproduce the error** 1) Render an animation. 2) While render is processing, change the resolution scale.
carczar commented 2014-04-25 18:37:23 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
carczar commented 2014-04-25 18:37:23 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @carczar

Added subscriber: @carczar

Added subscriber: @mont29

Added subscriber: @mont29

Rendering animation of default cube, I could not get any crash here, neither with BI nor Cycles… Please attach a crashing file.

Rendering animation of default cube, I could not get any crash here, neither with BI nor Cycles… Please attach a crashing file.

Added subscriber: @willi-2

Added subscriber: @willi-2

Confirmed on Win7/64, default scene, CPU rendering (BI and Cycles), at least since 2.58 including latest build.

EDIT: Target = AVI jpeg

Confirmed on Win7/64, default scene, CPU rendering (BI and Cycles), at least since 2.58 including latest build. EDIT: Target = AVI jpeg
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

Linux 64 bit: no crash but if you change the resolution scale, the next rendered frame will get the new resolution. But the image is not scaled to the new size, instead it is cropped to the bottom left corner - maybe there is the (0,0) coordinate during rendering.

Linux 64 bit: no crash but if you change the resolution scale, the next rendered frame will get the new resolution. But the image is not scaled to the new size, instead it is cropped to the bottom left corner - maybe there is the (0,0) coordinate during rendering.

So would be a Windows bug somehow… :/

So would be a Windows bug somehow… :/
Sergey Sharybin self-assigned this 2014-05-19 17:28:34 +02:00

You shouldn't be able to change resolution while rendering. Will look into it.

You shouldn't be able to change resolution while rendering. Will look into it.
Author

This issue was referenced by c56bbccb0d

This issue was referenced by c56bbccb0d7718c669e06c879e4cf903d6455cc3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c56bbccb0d.

Closed by commit c56bbccb0d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39901
No description provided.