Fix T39901: Crashes if the resolution % is changed while rendering an animation

Copy render percentage. dimensions and border settings and use them for all the
frames in the animation render.